fix image alignment

--- a/src/components/InlineComponents/InlineImage/InlineImage.sass
+++ b/src/components/InlineComponents/InlineImage/InlineImage.sass
@@ -1,5 +1,4 @@
 #image
-  margin-top: 64px
   position: relative
   border: 2px solid var(--foreground)
   overflow: hidden
